--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="UTF-8" />
-      <title>Automata</title>
+      <title>ClipBoard Sync</title>
    </head>
 
    <body>
